--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <option value="gte">以上になったら通知</option>
             <option value="lte">以下になったら通知</option>
           </select>
+          <label for="alertEmail">通知先メール</label>
+          <input id="alertEmail" type="email" placeholder="example@mail.com" />
           <label for="alertTargetRate">通知レート (JPY)</label>
           <input id="alertTargetRate" type="number" min="0" step="0.001" placeholder="例: 150.000" />
           <button id="alertAddBtn" type="button">予約追加</button>
